[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auraloss"
dynamic = ["version"]
description = "Audio-focused loss functions in PyTorch"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.6.0"
authors = [
    { name = "Christian Steinmetz", email = "c.j.steinmetz@qmul.ac.uk" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "torch",
]

[project.optional-dependencies]
all = [
    "librosa",
    "matplotlib",
    "scipy",
]
test = [
    "resampy",
    "torchaudio",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/csteinmetz1/auraloss"

[tool.hatch.version]
path = "setup.py"

[tool.hatch.build.targets.sdist]
include = [
    "/auraloss",
]

